# legal_timeline

./: README.md  pyproject.toml  test_pipeline.py
legal_timeline/: analyser.py  cli.py  extractor.py  reporter.py  visualiser.py  visualize_cli.py
src/: categoriser.py  date_parsing.py  models.py  timeline.py
